--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="page.html">страница</a>
+    <a href="pages/page.html">страница</a>
 
     <script src="assets/js/main.min.js"></script>
   </body>
